welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail: error: too many arguments for method hunt: ()Unit
		hunt(getParam(0).asInstanceOf[Color]); 
                    ^SlugSnail:5: error: not enough arguments for method isFacingTrail: (snail: java.awt.Color)Boolean.
Unspecified value parameter snail.
    if (isFacingTrail()==true){
                     ^